<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_add_track_album"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddTrackFragment"
    android:background="@color/vinilos_dark_gray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/track_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/track_name"
                android:background="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:counterTextColor="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/track_duration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/track_duration"
                android:background="@color/white"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_track"
            android:text="@string/add_track"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/vinilos_green"/>

    </LinearLayout>
</ScrollView>